# Media_Divergence_Index_for_CBR

./: .gitignore  AGENTS.md  README.md  config.yaml  events_test.csv  http_cache.sqlite  pyproject.toml  requirements.txt
configs/: annotate.yaml
data/: cases_outputs.xlsx  cases_report.md  cbr_event.xlsx  documents_raw.xlsx  mdi_outputs.xlsx
docs/labeling/: 00_scope.md  01_codebook.md  02_annotation_guidelines.md
mdi/: __init__.py
mdi/aggregate/: metrics.py  run.py
mdi/annotate/: graph.py  io.py  prompts.py  run.py  schema.py
mdi/cases/: run.py
schemas/: annotation_schema.json
scripts/: repair_annotations_csv.py
src/mdi/: __init__.py  collect.py  events.py  extract.py  fetch.py  relevance.py  utils.py
src/mdi/sources/: fontanka.py  rt.py  sitemap.py  vedomosti.py
templates/: annotations_template.csv
tests/: test_extract_relevance.py
tests/fixtures/: article.html  paywall.html  rubric.html
